--- a/landfill/templates/watch_movie.html
+++ b/landfill/templates/watch_movie.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>Watch {{ movie[1] }} online!</title>
+<title>Watch {{ movie[2] }} online!</title>
 </head>
 <body>
-<h1>Watch {{ movie[1] }} online!</h1>
+<h1>Watch {{ movie[2] }} online!</h1>
 <ul>
-<a href='/content/movies/{{ movie[0] }}'>{{ movie[1] }}</a>
+<a href='/content/movies/{{ movie[0] }}/{{ movie[1] }}'>{{ movie[2] }}</a>
 </ul>
 </body>
 </html>
